fix random scrollbar on content preview description

--- a/conreq/static-dev/css/modal.css
+++ b/conreq/static-dev/css/modal.css
@@ -227,7 +227,7 @@
 	font-size: 16px;
 	margin-top: 10px;
 	padding-right: 10px;
-	line-height: 1.2;
+	line-height: 1.25;
 	min-height: 150px;
 	max-height: 250px;
 	overflow-y: auto;
